syntax = "proto3";

package message;

option go_package = "him/common/protocol/msg/upload";

// 上传类型
enum UploadType {
    UploadTypeUnknown = 0; // 未知
    UploadTypeImage = 1; // 图片
    UploadTypeVoice = 2; // 语音
    UploadTypeVideo = 3; // 视频
    UploadTypeFile = 4; // 文件
}

// 上传请求（通过字节流）
message UploadReq {
    UploadType Type = 1; // 上传类型
}

// 上传响应
message UploadRsp {
    bytes Content = 1; // 内容，比如Image
}

// @存储模型
// 使用对象存储服务存储
message ObjectStore {
    string ContentType = 1; // HTTP头设置ContentType这样可以直接打开
    string URL = 2; // URL用于访问
    bytes Content = 3; // 对象
}

